services/users/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: users
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
  selector:
    app: users
